welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: not found: value Negative
  if ((Negative == false && ((a>0 && b<0)||(a<0 && b>0))) || (Negative == true && a<0 && b<0) )
       ^posNeg:2: error: not found: value Negative
  if ((Negative == false && ((a>0 && b<0)||(a<0 && b>0))) || (Negative == true && a<0 && b<0) )
                                                              ^posNeg:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((Negative == false && ((a>0 && b<0)||(a<0 && b>0))) || (Negative == true && a<0 && b<0) )
  ^